<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8E0144"
    tools:context=".OrderConfirmation">

    <TextView
        android:id="@+id/txtCongratulations"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txtCongratulations"
        android:textColor="#FDFFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/txtOrderPlaced"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtOrderPlaced"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="108dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/txtCongratulations"
        app:layout_constraintStart_toStartOf="@+id/txtCongratulations"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoimg" />

    <TextView
        android:id="@+id/txtOrderPlaced"
        android:layout_width="347dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:text="@string/txtOrderPlaced"
        android:textColor="#FFFFFF"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtMore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCongratulations" />

    <TextView
        android:id="@+id/txtMore"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="425dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="81dp"
        android:text="@string/txtMore"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtOrderNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="121dp"
        android:text="@string/txtOrderNumber"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtMore"
        app:layout_constraintTop_toBottomOf="@+id/txtMore" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:layout_marginBottom="61dp"
        android:backgroundTint="#8E0144"
        android:text="@string/btnHome"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMore" />
</androidx.constraintlayout.widget.ConstraintLayout>