<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollableOne"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EF6E6C"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/backgroundImg"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bgimg" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="411dp"
            android:layout_height="711dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:layout_marginStart="39dp"
                android:layout_marginEnd="39dp"
                android:layout_marginBottom="34dp"
                android:autofillHints=""
                android:background="@drawable/my_spinner_background"
                android:ems="10"
                android:hint="@string/userEmail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/userPass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/userPass"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:layout_marginStart="39dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="39dp"
                android:autofillHints=""
                android:background="@drawable/my_spinner_background"
                android:ems="10"
                android:hint="@string/userpass"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userEmail"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="200dp"
                android:background="@color/maroon"
                android:text="@string/loginBtn"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:text="@string/appName"
                android:textColor="@color/white"
                android:textSize="48sp"
                app:layout_constraintBottom_toTopOf="@+id/userEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:layout_marginBottom="21dp"
                android:contentDescription="@string/logoImg"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logoimg" />

            <Button
                android:id="@+id/btnGoSignUp"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="116dp"
                android:background="#8D0144"
                android:text="@string/signUpBtn"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>